[tool:pytest]
DJANGO_SETTINGS_MODULE = lms.envs.test
addopts = --nomigrations --reuse-db --durations=20 --json-report --json-report-omit keywords streams collectors log traceback tests --json-report-file=none
# Enable default handling for all warnings, including those that are ignored by default;
# but hide rate-limit warnings (because we deliberately don't throttle test user logins)
# and field_data deprecation warnings (because fixing them requires a major low-priority refactoring)
filterwarnings =
    default
    ignore:No request passed to the backend, unable to rate-limit:UserWarning
    ignore::xblock.exceptions.FieldDataDeprecationWarning
junit_family = xunit2
norecursedirs = .* *.egg build conf dist node_modules test_root cms/envs lms/envs
python_classes =
python_files = tests.py test_*.py tests_*.py *_tests.py __init__.py

[pycodestyle]
# error codes: https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# E501: line too long
# E265: block comment should start with '# '
#   We ignore this because pep8 used to erroneously lump E266 into it also.
#   We should probably fix these now.
# E266: too many leading '#' for block comment
#   We have lots of comments that look like "##### HEADING #####" which violate
#   this rule, because they don't have a space after the first #. However,
#   they're still perfectly reasonable comments, so we disable this rule.
# W602: deprecated form of raising exception
#   We do this in a few places to modify the exception message while preserving
#   the traceback. See this blog post for more info:
#   http://nedbatchelder.com/blog/200711/rethrowing_exceptions_in_python.html
#   It's a little unusual, but we have good reasons for doing so, so we disable
#   this rule.
# E305,E402,E722,E731,E741,E743,W503,W504: errors and warnings added since pep8/pycodestyle
# 1.5.7 that we haven't cleaned up yet
ignore=E265,E266,E305,E402,E501,E722,E731,E741,E743,W503,W504,W602
exclude=migrations,.git,.pycharm_helpers,.tox,test_root/staticfiles,node_modules

[isort]
indent='    '
line_length=120
multi_line_output=3
skip=
    envs
    migrations
    common/lib/safe_lxml/safe_lxml/etree.py

[metadata]
name = edx-platform
version = 1.0

[options]
install_requires =

    # From requirements/edx-sandbox/shared.txt
    cffi==1.14.5              # via cryptography
    click==7.1.2              # via nltk
    cryptography==3.2.1       # via -c requirements/edx-sandbox/../constraints.txt, -r requirements/edx-sandbox/shared.in
    joblib==0.14.1            # via -c requirements/edx-sandbox/../constraints.txt, nltk
    lxml==4.5.0               # via -c requirements/edx-sandbox/../constraints.txt, -r requirements/edx-sandbox/shared.in
    nltk==3.5                 # via -r requirements/edx-sandbox/shared.in
    pycparser==2.20           # via cffi
    regex==2021.3.17          # via nltk
    six==1.15.0               # via cryptography
    tqdm==4.59.0              # via nltk

    # From requirements/edx/github.in

    # Third-party:
    django-wiki @ git+https://github.com/edx/django-wiki.git@1.0.0
    MongoDBProxy @ git+https://github.com/edx/MongoDBProxy.git@d92bafe9888d2940f647a7b2b2383b29c752f35a#egg=MongoDBProxy==0.1.0+edx.2
    edx-jsme @ git+https://github.com/jazkarta/edx-jsme.git@690dbf75441fa91c7c4899df0b83d77f7deb5458#egg=edx-jsme

    # This is a temporary fork until https://github.com/brutasse/django-ratelimit-backend/pull/50 is merged
    # back into the upstream code.
    django-ratelimit-backend @ git+https://github.com/edx/django-ratelimit-backend.git@v2.0.1a5#egg=django-ratelimit-backend==2.0.1a5

    # Our libraries:
    codejail @ git+https://github.com/edx/codejail.git@3.1.3#egg=codejail==3.1.3
    acid-xblock @ git+https://github.com/edx/acid-block.git@758855a67d2f12bd74db4d5e7a0862d6e65f079c#egg=acid-xblock
    rate-xblock @ git+https://github.com/edx/RateXBlock.git@2.0.1#egg=rate-xblock
    done-xblock @ git+https://github.com/edx/DoneXBlock.git@2.0.3#egg=done-xblock
    xblock-google-drive @ git+https://github.com/edx-solutions/xblock-google-drive.git@2d176468e33c0713c911b563f8f65f7cf232f5b6#egg=xblock-google-drive

    # Third Party XBlocks

    xblock-poll @ git+https://github.com/open-craft/xblock-poll@922cd36fb1c3cfe00b4ce03b19a13185d136447d#egg=xblock-poll==1.10.2
    xblock-drag-and-drop @ git+https://github.com/edx-solutions/xblock-drag-and-drop-v2@v2.3.4#egg=xblock-drag-and-drop-v2==2.3.4


    # from requirements/edx/paver.txt
    certifi==2020.12.5        # via requests
    chardet==4.0.0            # via requests
    edx-opaque-keys==2.2.0    # via -r requirements/edx/paver.in
    idna==2.10                # via requests
    lazy==1.4                 # via -r requirements/edx/paver.in
    libsass==0.10.0           # via -r requirements/edx/paver.in
    markupsafe==1.1.1         # via -r requirements/edx/paver.in
    mock==4.0.3               # via -r requirements/edx/paver.in
    path==13.1.0              # via -c requirements/edx/../constraints.txt, -r requirements/edx/paver.in
    paver==1.3.4              # via -r requirements/edx/paver.in
    pbr==5.5.1                # via stevedore
    psutil==5.8.0             # via -r requirements/edx/paver.in
    pymongo==3.10.1           # via -c requirements/edx/../constraints.txt, -r requirements/edx/paver.in, edx-opaque-keys
    python-memcached==1.59    # via -r requirements/edx/paver.in
    requests==2.25.1          # via -r requirements/edx/paver.in
    six==1.15.0               # via libsass, paver, python-memcached, stevedore
    stevedore==1.32.0         # via -c requirements/edx/../constraints.txt, -r requirements/edx/paver.in, edx-opaque-keys
    urllib3==1.26.4           # via requests
    watchdog==2.0.2           # via -r requirements/edx/paver.in
    wrapt==1.11.2             # via -c requirements/edx/../constraints.txt, -r requirements/edx/paver.in

    # from requirements/edx/base.in
    analytics-python                    # Used for Segment analytics
    attrs                               # Reduces boilerplate code involving class attributes
    Babel                               # Internationalization utilities, used for date formatting in a few places
    bleach                              # Allowed-list-based HTML sanitizing library that escapes or strips markup and attributes; used for capa and LTI
    boto==2.39.0                        # Deprecated version of the AWS SDK; we should stop using this
    boto3==1.4.8                        # Amazon Web Services SDK for Python
    botocore==1.8.17                    # via boto3, s3transfer
    bridgekeeper                        # Used for determining permissions for courseware.
    celery                              # Asynchronous task execution library
    chem                                # A helper library for chemistry calculations
    contextlib2                         # We need contextlib2.ExitStack so we can stop using contextlib.nested which doesn't exist in python 3
    crowdsourcehinter-xblock
    defusedxml
    Django                              # Web application framework
    django-appconf
    django-celery-results               # Only used for the CacheBackend for celery results
    django-cookies-samesite             # Middleware which allows SameSite=None flag for session and csrf cookies in Django<3.0.5
    django-config-models>=1.0.0         # Configuration models for Django allowing config management with auditing
    django-cors-headers                 # Used to allow to configure CORS headers for cross-domain requests
    django-countries                    # Country data for Django forms and model fields
    django-crum                         # Middleware that stores the current request and user in thread local storage
    django-fernet-fields                # via edx-enterprise (should be added to its setup.py)
    django-filter                       # Allows users to filter Django querysets dynamically
    django-ipware                       # Get the client's real IP address
    django-method-override              # Allow use of HTTP methods normally not supported by browsers via the X-HTTP-Method-Override header
    django-model-utils
    django-mptt
    django-mysql
    django-oauth-toolkit                # Provides oAuth2 capabilities for Django
    django-pipeline
    django-pyfs
    django-ratelimit
    django-require
    django-sekizai
    django-ses
    django-simple-history
    django-splash
    django-statici18n
    django-storages
    django-user-tasks
    django-waffle
    django-webpack-loader               # Used to wire webpack bundles into the django asset pipeline
    djangorestframework
    edx-ace
    edx-analytics-data-api-client
    edx-api-doc-tools
    edx-bulk-grades                     # LMS REST API for managing bulk grading operations
    edx-ccx-keys
    edx-celeryutils
    edx-completion
    edx-django-release-util             # Release utils for the edx release pipeline
    edx-django-sites-extensions
    edx-django-utils>=3.12.0            # Utilities for cache, monitoring, and plugins; 3.12.0+ for set_code_owner_attribute method
    edx-drf-extensions
    edx-enterprise
    edx-event-routing-backends
    edx-milestones
    edx-organizations
    edx-proctoring>=2.0.1
    edx-proctoring-proctortrack==1.0.5  # Intentionally and permanently pinned to ensure code changes are reviewed
    edx-rest-api-client
    edx-search
    edx-sga
    edx-submissions
    edx-toggles                         # Feature toggles management
    edx-user-state-client
    edx-when
    edxval
    event-tracking
    fs==2.0.18
    fs-s3fs==0.1.8
    geoip2                              # Python API for the GeoIP web services and databases
    glob2                               # Enhanced glob module, used in openedx.core.lib.rooted_paths
    gunicorn
    help-tokens
    html5lib                            # HTML parser, used for capa problems
    icalendar                           # .ics generator, used by calendar_sync
    ipaddress                           # Ip network support for Embargo feature
    jsonfield2                          # Django model field for validated JSON; used in several apps
    laboratory                          # Library for testing that code refactors/infrastructure changes produce identical results
    lti-consumer-xblock
    mailsnake                           # Needed for mailchimp (mailing djangoapp)
    mako                                # Primary template language used for server-side page rendering
    Markdown                            # Convert text markup to HTML; used in capa problems, forums, and course wikis
    mongoengine                         # Object-document mapper for MongoDB, used in the LMS dashboard
    mysqlclient                         # Driver for the default production relational database
    newrelic                            # New Relic agent for performance monitoring
    nodeenv                             # Utility for managing Node.js environments; we use this for deployments and testing
    oauthlib                            # OAuth specification support for authenticating via LTI or other Open edX services
    openedx-calc                        # Library supporting mathematical calculations for Open edX
    ora2
    piexif                              # Exif image metadata manipulation, used in the profile_images app
    Pillow                              # Image manipulation library; used for course assets, profile images, invoice PDFs, etc.
    py2neo<4.0.0                        # Used to communicate with Neo4j, which is used internally for modulestore inspection
    PyContracts
    pycountry
    pycryptodomex
    pygments                            # Used to support colors in paver command output
    pyjwkest
    # TODO Replace PyJWT usage with pyjwkest
    # PyJWT 1.6.3 contains PyJWTError, which is required by Apple auth in social-auth-core
    PyJWT>=1.6.3
    pymongo                             # MongoDB driver
    pynliner                            # Inlines CSS styles into HTML for email notifications
    python-dateutil
    python-Levenshtein
    python3-openid ; python_version>='3'
    python3-saml
    pyuca                               # For more accurate sorting of translated country names in django-countries
    recommender-xblock                  # https://github.com/edx/RecommenderXBlock
    rest-condition                      # DRF's recommendation for supporting complex permissions
    social-auth-core
    pysrt                               # Support for SubRip subtitle files, used in the video XModule
    pytz                                # Time zone information database
    PyYAML                              # Used to parse XModule resource templates
    redis                               # celery task broker
    requests-oauthlib                   # Simplifies use of OAuth via the requests library, used for CCX and LTI
    random2
    rules                               # Django extension for rules-based authorization checks
    simplejson
    sailthru-client                     # For Sailthru integration
    Shapely                             # Geometry library, used for image click regions in capa
    six                                 # Utilities for supporting Python 2 & 3 in the same codebase
    social-auth-app-django
    sorl-thumbnail
    sortedcontainers                    # Provides SortedKeyList, used for lists of XBlock assets
    sqlparse                            # Required by Django to run migrations.RunSQL
    stevedore                           # Support for runtime plugins, used for XBlocks and edx-platform Django app plugins
    staff-graded-xblock                 # An XBlock that allows for off-site bulk scoring of problems
    super-csv                           # Generic CSV processor
    unicodecsv                          # Easier support for CSV files with unicode text
    user-util                           # Functionality for retiring users (GDPR compliance)
    web-fragments                       # Provides the ability to render fragments of web pages
    XBlock                              # Courseware component architecture
    xblock-utils                        # Provides utilities used by the Discussion XBlock
    xss-utils                           # https://github.com/edx/edx-platform/pull/20633 Fix XSS via Translations
    enmerkar-underscore                 # Implements a underscore extractor for django-babel.

[options.entry_points]
openedx.course_tab =
    ccx = lms.djangoapps.ccx.plugins:CcxCourseTab
    courseware = lms.djangoapps.courseware.tabs:CoursewareTab
    course_info = lms.djangoapps.courseware.tabs:CourseInfoTab
    dates = lms.djangoapps.courseware.tabs:DatesTab
    discussion = lms.djangoapps.discussion.plugins:DiscussionTab
    edxnotes = lms.djangoapps.edxnotes.plugins:EdxNotesTab
    external_discussion = lms.djangoapps.courseware.tabs:ExternalDiscussionCourseTab
    external_link = lms.djangoapps.courseware.tabs:ExternalLinkCourseTab
    html_textbooks = lms.djangoapps.courseware.tabs:HtmlTextbookTabs
    instructor = lms.djangoapps.instructor.views.instructor_dashboard:InstructorDashboardTab
    lti_discussion = openedx.features.lti_course_tab.tab:DiscussionLtiCourseTab
    lti_tab = openedx.features.lti_course_tab.tab:LtiCourseTab
    pdf_textbooks = lms.djangoapps.courseware.tabs:PDFTextbookTabs
    progress = lms.djangoapps.courseware.tabs:ProgressTab
    static_tab = xmodule.tabs:StaticTab
    syllabus = lms.djangoapps.courseware.tabs:SyllabusTab
    teams = lms.djangoapps.teams.plugins:TeamsTab
    textbooks = lms.djangoapps.courseware.tabs:TextbookTabs
    wiki = lms.djangoapps.course_wiki.tab:WikiTab
openedx.course_tool =
    calendar_sync_toggle = openedx.features.calendar_sync.plugins:CalendarSyncToggleTool
    course_bookmarks = openedx.features.course_bookmarks.plugins:CourseBookmarksTool
    course_updates = openedx.features.course_experience.plugins:CourseUpdatesTool
    verified_upgrade = lms.djangoapps.courseware.course_tools:VerifiedUpgradeTool
    financial_assistance = lms.djangoapps.courseware.course_tools:FinancialAssistanceTool
openedx.user_partition_scheme =
    random = openedx.core.djangoapps.user_api.partition_schemes:RandomUserPartitionScheme
    cohort = openedx.core.djangoapps.course_groups.partition_scheme:CohortPartitionScheme
    verification = openedx.core.djangoapps.user_api.partition_schemes:ReturnGroup1PartitionScheme
    enrollment_track = openedx.core.djangoapps.verified_track_contenpartition_scheme:EnrollmentTrackPartitionScheme
    content_type_gate = openedx.features.content_type_gating.partitions:ContentTypeGatingPartitionScheme
openedx.block_structure_transformer =
    library_content = lms.djangoapps.course_blocks.transformers.library_content:ContentLibraryTransformer
    library_content_randomize = lms.djangoapps.course_blocks.transformerlibrary_content:ContentLibraryOrderTransformer
    split_test = lms.djangoapps.course_blocks.transformers.split_test:SplitTestTransformer
    start_date = lms.djangoapps.course_blocks.transformers.start_date:StartDateTransformer
    user_partitions = lms.djangoapps.course_blocks.transformers.user_partitions:UserPartitionTransformer
    visibility = lms.djangoapps.course_blocks.transformers.visibility:VisibilityTransformer
    hide_empty = lms.djangoapps.course_blocks.transformers.hide_empty:HideEmptyTransformer
    hidden_content = lms.djangoapps.course_blocks.transformers.hidden_content:HiddenContentTransformer
    course_blocks_api = lms.djangoapps.course_api.blocks.transformers.blocks_api:BlocksAPITransformer
    milestones = lms.djangoapps.course_api.blocks.transformers.milestones:MilestonesAndSpecialExamsTransformer
    grades = lms.djangoapps.grades.transformer:GradesTransformer
    completion = lms.djangoapps.course_api.blocks.transformers.block_completion:BlockCompletionTransformer
    load_override_data = lms.djangoapps.course_blocks.transformers.load_override_data:OverrideDataTransformer
    content_type_gate = openedx.features.content_type_gating.block_transformers:ContentTypeGateTransformer
    access_denied_message_filter = lms.djangoapps.course_blocks.transformeraccess_denied_filter:AccessDeniedMessageFilterTransformer
    open_assessment_transformer = lms.djangoapps.courseware.transformers:OpenAssessmentDateTransformer
    effort_estimation = openedx.features.effort_estimation.api:EffortEstimationTransformer
openedx.ace.policy =
    bulk_email_optout = lms.djangoapps.bulk_email.policies:CourseEmailOptou
openedx.call_to_action =
    personalized_learner_schedules = openedx.features.personalized_learner_schedulecall_to_action:PersonalizedLearnerScheduleCallToAction
lms.djangoapp =
    announcements = openedx.features.announcements.apps:AnnouncementsConfig
    ace_common = openedx.core.djangoapps.ace_common.apps:AceCommonConfig
    credentials = openedx.core.djangoapps.credentials.apps:CredentialsConfig
    content_libraries = openedx.core.djangoapps.content_libraries.apps:ContentLibrariesConfig
    discussion = lms.djangoapps.discussion.apps:DiscussionConfig
    discussions = openedx.core.djangoapps.discussions.apps:DiscussionsConfig
    grades = lms.djangoapps.grades.apps:GradesConfig
    plugins = openedx.core.djangoapps.plugins.apps:PluginsConfig
    theming = openedx.core.djangoapps.theming.apps:ThemingConfig
    bookmarks = openedx.core.djangoapps.bookmarks.apps:BookmarksConfig
    zendesk_proxy = openedx.core.djangoapps.zendesk_proxy.apps:ZendeskProxyConfig
    instructor = lms.djangoapps.instructor.apps:InstructorConfig
    password_policy = openedx.core.djangoapps.password_policy.apps:PasswordPolicyConfig
    user_authn = openedx.core.djangoapps.user_authn.apps:UserAuthnConfig
    program_enrollments = lms.djangoapps.program_enrollments.apps:ProgramEnrollmentsConfig
    courseware_api = openedx.core.djangoapps.courseware_api.apps:CoursewareAPIConfig
cms.djangoapp =
    announcements = openedx.features.announcements.apps:AnnouncementsConfig
    ace_common = openedx.core.djangoapps.ace_common.apps:AceCommonConfig
    content_libraries = openedx.core.djangoapps.content_libraries.apps:ContentLibrariesConfig
    # Importing an LMS app into the Studio process is not a good
    # practice. We're ignoring this for Discussions here because its
    # placement in LMS is a historical artifact. The eventual goal is to
    # consolidate the multiple discussions-related Django apps and
    # either put them in the openedx/ dir, or in another repo entirely.
    discussion = lms.djangoapps.discussion.apps:DiscussionConfig
    olx_rest_api = openedx.core.djangoapps.olx_rest_api.apps:OlxRestApiAppConfig
    plugins = openedx.core.djangoapps.plugins.apps:PluginsConfig
    theming = openedx.core.djangoapps.theming.apps:ThemingConfig
    bookmarks = openedx.core.djangoapps.bookmarks.apps:BookmarksConfig
    zendesk_proxy = openedx.core.djangoapps.zendesk_proxy.apps:ZendeskProxyConfig
    password_policy = openedx.core.djangoapps.password_policy.apps:PasswordPolicyConfig
    user_authn = openedx.core.djangoapps.user_authn.apps:UserAuthnConfig
    instructor = lms.djangoapps.instructor.apps:InstructorConfig
openedx.learning_context =
    lib = openedx.core.djangoapps.content_libraries.library_context:LibraryContextImpl
openedx.dynamic_partition_generator =
    enrollment_track = common.lib.xmodule.xmodule.partitions.enrollment_track_partition_generator:create_enrollment_track_partition
    content_type_gating = openedx.features.content_type_gating.partitions:create_content_gating_partition

xblock.v1 =
    about = xmodule.html_module:AboutBlock
    book = xmodule.template_module:TranslateCustomTagBlock
    annotatable = xmodule.annotatable_module:AnnotatableBlock
    chapter = xmodule.seq_module:SectionBlock
    conditional = xmodule.conditional_module:ConditionalBlock
    course = xmodule.course_module:CourseBlock
    course_info = xmodule.html_module:CourseInfoBlock
    customtag = xmodule.template_module:CustomTagBlock
    custom_tag_template = xmodule.template_module:CustomTagTemplateBlock
    discuss = xmodule.template_module:TranslateCustomTagBlock
    error = xmodule.error_module:ErrorBlock
    hidden = xmodule.hidden_module:HiddenDescriptor
    html = xmodule.html_module:HtmlBlock
    image = xmodule.template_module:TranslateCustomTagBlock
    library = xmodule.library_root_xblock:LibraryRoot
    library_content = xmodule.library_content_module:LibraryContentBlock
    library_sourced = xmodule.library_sourced_block:LibrarySourcedBlock
    lti = xmodule.lti_module:LTIBlock
    nonstaff_error = xmodule.error_module:NonStaffErrorBlock
    poll_question = xmodule.poll_module:PollBlock
    problem = xmodule.capa_module:ProblemBlock
    problemset = xmodule.seq_module:SequenceBlock
    randomize = xmodule.randomize_module:RandomizeBlock
    sequential = xmodule.seq_module:SequenceBlock
    slides = xmodule.template_module:TranslateCustomTagBlock
    split_test = xmodule.split_test_module:SplitTestBlock
    static_tab = xmodule.html_module:StaticTabBlock
    unit = xmodule.unit_block:UnitBlock
    vertical = xmodule.vertical_block:VerticalBlock
    video = xmodule.video_module:VideoBlock
    videoalpha = xmodule.video_module:VideoBlock
    videodev = xmodule.template_module:TranslateCustomTagBlock
    videosequence = xmodule.seq_module:SequenceBlock
    word_cloud = xmodule.word_cloud_module:WordCloudBlock
    wrapper = xmodule.wrapper_module:WrapperBlock

xblock_asides.v1 =
    tagging_aside = cms.lib.xblock.tagging:StructuredTagsAside

console_scripts =
    xmodule_assets = xmodule.static_content:main
