[options]
packages = utils.thirdparty_apis

[options.entry_points]
# `retirement_driver` is the namespace chosen by our plugin manager
# this driver should register itself to `retirement_driver`
retirement_driver =
    AMPLITUDE = utils.thirdparty_apis.amplitude_api:AmplitudeApi
    BRAZE = utils.thirdparty_apis.braze_api:BrazeApi
    HUBSPOT = utils.thirdparty_apis.hubspot_api:HubspotApi
    SALESFORCE = utils.thirdparty_apis.salesforce_api:SalesforceApi
    SEGMENT = utils.thirdparty_apis.segment_api:SegmentApi
